clusters/k8s-01/apps/openclaw/configs/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openclaw
  labels:
    app.kubernetes.io/name: openclaw
spec:
  ports:
    - port: 22
      protocol: TCP
      name: ssh
    - port: 9100
      protocol: TCP
      name: node-exporter
  selector:
    app.kubernetes.io/name: openclaw
